# lovamap-proto

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  setup.py  setup.sh
.github/workflows/: test.yml
lovamap_proto/: converter.py
schemas/: Descriptors.proto
src/: Descriptors.proto
tests/: conftest.py  test_converter.py  test_json2pb.py  test_pb2json.py
tests/fixtures/: valid_full.json
tools/: __init__.py  cli.py  converter.py  json2pb.py  pb2json.py
